test/errors/field_names_error/zs/reserved_zserio_keyword_error.zs
package reserved_zserio_keyword_error;

struct InvalidFieldNameError
{
    // index is a reserved keyword!
    int32 index;
};
